--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "echo \"Run 'npm run setup' to set up Python agents\""
   },
   "dependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.0.0",
+    "@electron/remote": "^2.0.10"
   },
   "license": "MIT"
 }
