--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "agentic-browser",
+  "name": "browzer",
+  "productName": "Browzer",
   "version": "1.0.0",
-  "description": "Browser with agent-based capabilities",
+  "description": "AI-powered browser with agent-based capabilities",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -13,6 +14,8 @@
     "electron": "^28.0.0",
     "@electron/remote": "^2.0.10"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "electron-builder": "^26.0.12"
+  }
 }
- 
