--- a/package.json
+++ b/package.json
@@ -4,18 +4,150 @@
   "version": "1.0.0",
   "description": "AI-powered browser with agent-based capabilities",
   "main": "main.js",
+  "homepage": "https://github.com/your-username/browzer",
+  "author": {
+    "name": "Your Name",
+    "email": "your.email@example.com"
+  },
   "scripts": {
     "start": "electron .",
     "setup": "cd agents && chmod +x setup.sh && ./setup.sh",
     "setup-win": "cd agents && .\\setup.bat",
-    "postinstall": "echo \"Run 'npm run setup' to set up Python agents\""
+    "postinstall": "echo \"Run 'npm run setup' to set up Python agents\"",
+    "prepare-python": "./scripts/prepare-python-bundle.sh",
+    "prebuild": "npm run prepare-python",
+    "build": "electron-builder",
+    "build:mac": "electron-builder --mac",
+    "build:linux": "electron-builder --linux",
+    "build:win": "electron-builder --win",
+    "build:all": "electron-builder --mac --linux --win",
+    "dist": "npm run build",
+    "pack": "electron-builder --dir",
+    "rebuild": "electron-rebuild"
+  },
+  "build": {
+    "appId": "com.browzer.app",
+    "productName": "Browzer",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "main.js",
+      "renderer.js",
+      "preload.js",
+      "index.html",
+      "styles.css",
+      "history.html",
+      "agents/**/*",
+      "node_modules/**/*",
+      "!node_modules/*/{README.md,readme.md,CHANGELOG.md,changelog.md}",
+      "!agents/venv/**/*",
+      "!**/*.pyc",
+      "!**/__pycache__",
+      "!agents/.env"
+    ],
+    "extraFiles": [
+      {
+        "from": "agents",
+        "to": "Resources/agents",
+        "filter": [
+          "**/*",
+          "!venv/**/*",
+          "!.env",
+          "!**/*.pyc",
+          "!**/__pycache__"
+        ]
+      },
+      {
+        "from": "python-bundle/python-runtime",
+        "to": "Resources/python-runtime",
+        "filter": [
+          "**/*"
+        ]
+      }
+    ],
+    "mac": {
+      "category": "public.app-category.productivity",
+      "icon": "assets/icon.icns",
+      "target": [
+        {
+          "target": "zip",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
+        }
+      ],
+      "darkModeSupport": true,
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "assets/entitlements.mac.plist",
+      "entitlementsInherit": "assets/entitlements.mac.plist"
+    },
+    "linux": {
+      "category": "Network",
+      "icon": "assets/icon.png",
+      "target": [
+        {
+          "target": "AppImage",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "deb",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "rpm",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "tar.gz",
+          "arch": [
+            "x64"
+          ]
+        }
+      ]
+    },
+    "win": {
+      "icon": "assets/icon.ico",
+      "target": [
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        },
+        {
+          "target": "portable",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ]
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true,
+      "createDesktopShortcut": true,
+      "createStartMenuShortcut": true,
+      "shortcutName": "Browzer"
+    }
   },
   "dependencies": {
-    "electron": "^28.0.0",
     "@electron/remote": "^2.0.10"
   },
   "license": "MIT",
   "devDependencies": {
-    "electron-builder": "^26.0.12"
+    "electron": "^28.0.0",
+    "electron-builder": "^26.0.12",
+    "electron-icon-builder": "^2.0.1"
   }
 }
