--- a/package.json
+++ b/package.json
@@ -144,12 +144,21 @@
     }
   },
   "dependencies": {
-    "@electron/remote": "^2.0.10"
+    "@electron/remote": "^2.0.10",
+    "axios": "^1.6.0"
   },
   "license": "MIT",
   "devDependencies": {
     "electron": "^28.0.0",
     "electron-builder": "^26.0.12",
-    "electron-icon-builder": "^2.0.1"
+    "electron-icon-builder": "^2.0.1",
+    "typescript": "^5.3.0",
+    "@types/node": "^20.0.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "ts-loader": "^9.5.0",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "html-webpack-plugin": "^5.5.0"
   }
 }
