--- a/extensions/cmbs76uhb0001d1qlpwoj9tbr/requirements.txt
+++ b/extensions/cmbs76uhb0001d1qlpwoj9tbr/requirements.txt
@@ -3,4 +3,6 @@ beautifulsoup4>=4.12.0
 nltk>=3.8
 openai>=1.0.0
 anthropic>=0.52.0
+google-auth==2.40.3
+google-genai==1.36.0
 python-dotenv>=1.0.0 
