--- a/extensions/cmbss0xti000189u7j28kyfic/requirements.txt
+++ b/extensions/cmbss0xti000189u7j28kyfic/requirements.txt
@@ -1,4 +1,6 @@
 requests>=2.31.0
 beautifulsoup4>=4.12.0
 anthropic>=0.52.0
-openai>=1.0.0 
+openai>=1.0.0
+google-auth==2.40.3
+google-genai==1.36.0
