--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
   "devDependencies": {
     "@electron/notarize": "^3.0.2",
     "@types/node": "^20.0.0",
+    "@types/ws": "^8.18.1",
     "copy-webpack-plugin": "^13.0.0",
     "css-loader": "^6.8.1",
     "electron": "^28.0.0",
