--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.21",
@@ -54,11 +55,14 @@
     "eslint-plugin-import": "^2.32.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
-    "typescript": "~4.5.5",
+    "typescript": "^4.5.5",
     "vite": "^5.4.20"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.66.0",
+    "@ai-sdk/anthropic": "^2.0.37",
+    "@anthropic-ai/sdk": "^0.65.0",
+    "@chroma-core/default-embed": "^0.1.8",
+    "@google/genai": "^1.24.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -75,8 +79,11 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
+    "ai": "^5.0.78",
+    "chromadb": "^3.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^11.0.2",
     "input-otp": "^1.4.2",
@@ -88,6 +95,7 @@
     "react-router-dom": "^7.9.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "turndown": "^7.2.1",
     "tw-animate-css": "^1.4.0",
     "zustand": "^5.0.8"
   }
