--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^8.46.1",
     "@typescript-eslint/parser": "^8.46.1",
     "autoprefixer": "^10.4.21",
@@ -54,10 +55,11 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3",
-    "@types/turndown": "^5.0.5",
     "vite": "^5.4.20"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^2.0.32",
+    "@ai-sdk/openai": "^2.0.52",
     "@anthropic-ai/sdk": "^0.65.0",
     "@chroma-core/default-embed": "^0.1.8",
     "@google/genai": "^1.24.0",
@@ -77,6 +79,10 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/node": "^24.8.0",
+    "ai": "^5.0.76",
+    "bull": "^4.16.5",
     "chromadb": "^3.0.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -94,6 +100,8 @@
     "tailwind-merge": "^3.3.1",
     "turndown": "^7.2.1",
     "tw-animate-css": "^1.4.0",
+    "winston": "^3.18.3",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   }
 }
