VLM based enhancements

--- a/.env.vlm
+++ b/.env.vlm
@@ -1,14 +1,14 @@
-# VLM (Vision Language Model) Configuration
+# VLM (Vision Language Model) Configuration - Local Model
 # Set to 'true' to enable VLM enhancements, 'false' to disable
 
-# Feature flag - disable until cloud instance is ready
-VLM_ENABLED=false
+# Feature flag - set to true to use local model
+VLM_ENABLED=true
 
-# Cloud API Configuration (update when ready)
-VLM_API_ENDPOINT=https://vlm-api.browzer.cloud/v1/analyze
-VLM_API_KEY=your-api-key-here
+# Local Model Configuration - using app-local paths
+VLM_MODEL_PATH=./vlm-models/checkpoints/llava-fastvithd_1.5b_stage3
+VLM_ML_PATH=./vlm-models
 
-# Additional VLM Settings
+# Model Settings
 VLM_TIMEOUT_MS=30000
-VLM_BATCH_SIZE=3
-VLM_MAX_RETRIES=2
+VLM_MAX_NEW_TOKENS=128
+VLM_TEMPERATURE=0.0
