--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Backend API Configuration
 BACKEND_API_URL=http://localhost:8000/api/v1
 BACKEND_API_KEY=your_secure_api_key_here
+
+# SSE Configuration
+MAX_SSE_RECONNECT_ATTEMPTS=20
