refactor: remove unnecessary "use client" directives from UI components
- Removed "use client" directives from 26 renderer UI component files as they're not needed in Electron context
- Added fs-xattr and macos-alias to external dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
       "electron",
       "electron-winstaller",
       "esbuild",
+      "fs-xattr",
+      "macos-alias",
       "unrs-resolver"
     ]
   },
