--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -1,33 +1,27 @@
-name: Build macOS Releases
+name: Build and Release macOS
 
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*.*.*'
   workflow_dispatch:
     inputs:
-      arch:
-        description: 'Architecture to build'
-        required: true
-        default: 'universal'
-        type: choice
-        options:
-          - x64
-          - arm64
-          - universal
+      version:
+        description: 'Version to build (e.g., v1.0.0)'
+        required: false
+        default: ''
+
+env:
+  NODE_VERSION: '22'
+  PNPM_VERSION: '10.19.0'
 
 jobs:
-  build:
+  build-macos:
     runs-on: macos-latest
+    
     strategy:
       matrix:
-        include:
-          - arch: x64
-            name: Intel
-          - arch: arm64
-            name: Apple Silicon
-          - arch: universal
-            name: Universal
+        arch: [x64, arm64]
     
     steps:
       - name: Checkout code
@@ -36,170 +30,280 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
       
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: ${{ env.PNPM_VERSION }}
+      
+      - name: Get pnpm store directory
+        shell: bash
+        run: echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+      
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-
       
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       
-      - name: Build for macOS (${{ matrix.name }})
+      - name: Setup Apple certificates
         env:
+          APPLE_CERT_DATA: ${{ secrets.APPLE_CERT_DATA }}
+          APPLE_CERT_PASSWORD: ${{ secrets.APPLE_CERT_PASSWORD }}
+        run: |
+          # Create temporary keychain
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          KEYCHAIN_PASSWORD=$(openssl rand -base64 32)
+          
+          echo "Creating keychain..."
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          
+          # Import certificate
+          echo "Importing certificate..."
+          CERT_PATH=$RUNNER_TEMP/certificate.p12
+          echo -n "$APPLE_CERT_DATA" | base64 --decode -o $CERT_PATH
+          security import $CERT_PATH -P "$APPLE_CERT_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          
+          # Enable codesigning
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          
+          # Verify certificate is available
+          echo "Verifying certificate..."
+          security find-identity -v -p codesigning $KEYCHAIN_PATH
+      
+      - name: Build for macOS (${{ matrix.arch }})
+        env:
+          NODE_ENV: production
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
           APPLE_IDENTITY: ${{ secrets.APPLE_IDENTITY }}
-          NODE_ENV: production
-          DEBUG: electron-forge:*
+          DEBUG: electron-osx-sign*,electron-notarize*
+          ELECTRON_FORGE_ARCH: ${{ matrix.arch }}
         run: |
-          if [ "${{ matrix.arch }}" = "x64" ]; then
-            npm run make:dmg
-          elif [ "${{ matrix.arch }}" = "arm64" ]; then
-            npm run make:arm64
-          else
-            npm run make:universal
-          fi
+          echo "Building for ${{ matrix.arch }}..."
+          pnpm run make -- --arch=${{ matrix.arch }} --platform=darwin
+      
+      - name: List build output
+        run: |
+          echo "Build output:"
+          find out -type f -name "*.dmg" -o -name "*.zip"
       
       - name: Generate checksums
         run: |
-          cd out/make
-          for file in *.dmg *.zip; do
-            if [ -f "$file" ]; then
-              echo "Generating SHA256 for $file"
-              shasum -a 256 "$file" > "$file.sha256"
-              echo "Generating SHA512 for $file"
-              shasum -a 512 "$file" > "$file.sha512"
-            fi
+          echo "Generating checksums..."
+          find out/make -type f \( -name "*.dmg" -o -name "*.zip" \) | while read file; do
+            echo "Processing: $file"
+            shasum -a 256 "$file" | tee "$file.sha256"
+            shasum -a 512 "$file" | tee "$file.sha512"
           done
-          ls -lah
       
       - name: Verify code signing
         run: |
-          cd out/make
-          for app in *.app; do
-            if [ -d "$app" ]; then
-              echo "Verifying signature for $app"
-              codesign -v -v "$app" || echo "Warning: Could not verify $app"
-            fi
+          echo "Verifying code signatures..."
+          find out -name "*.app" -type d | while read app; do
+            echo "Checking: $app"
+            codesign -dv --verbose=4 "$app" 2>&1 || echo "Warning: Could not verify $app"
+            spctl -a -vvv "$app" 2>&1 || echo "Warning: Gatekeeper check failed for $app"
           done
       
-      - name: Create release notes
-        if: startsWith(github.ref, 'refs/tags/')
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/}
-          echo "# Release $VERSION" > release_notes.md
-          echo "" >> release_notes.md
-          echo "## Downloads" >> release_notes.md
-          echo "" >> release_notes.md
-          echo "### macOS" >> release_notes.md
-          echo "- **Universal Binary** (Intel & Apple Silicon): \`Browzer-${VERSION}.dmg\`" >> release_notes.md
-          echo "- **Intel Only**: \`Browzer-${VERSION}-x64.dmg\`" >> release_notes.md
-          echo "- **Apple Silicon Only**: \`Browzer-${VERSION}-arm64.dmg\`" >> release_notes.md
-          echo "" >> release_notes.md
-          echo "## Verification" >> release_notes.md
-          echo "Verify the integrity of downloaded files:" >> release_notes.md
-          echo "\`\`\`bash" >> release_notes.md
-          echo "shasum -a 256 -c Browzer-${VERSION}.dmg.sha256" >> release_notes.md
-          echo "\`\`\`" >> release_notes.md
-          echo "" >> release_notes.md
-          echo "## Installation" >> release_notes.md
-          echo "1. Download the appropriate DMG for your Mac" >> release_notes.md
-          echo "2. Double-click to mount the DMG" >> release_notes.md
-          echo "3. Drag Browzer to the Applications folder" >> release_notes.md
-          echo "4. Launch from Applications" >> release_notes.md
-          cat release_notes.md
-      
-      - name: Upload to Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            out/make/*.dmg
-            out/make/*.zip
-            out/make/*.sha256
-            out/make/*.sha512
-          body_path: release_notes.md
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
       - name: Upload artifacts
-        if: '!startsWith(github.ref, ''refs/tags/'')'
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: browzer-macos-${{ matrix.arch }}
           path: |
-            out/make/*.dmg
-            out/make/*.zip
-            out/make/*.sha256
-            out/make/*.sha512
+            out/make/**/*.dmg
+            out/make/**/*.zip
+            out/make/**/*.sha256
+            out/make/**/*.sha512
           retention-days: 30
+          if-no-files-found: error
+      
+      - name: Cleanup certificates
+        if: always()
+        run: |
+          security delete-keychain $RUNNER_TEMP/app-signing.keychain-db || true
+          rm -f $RUNNER_TEMP/certificate.p12 || true
 
-  create-latest-yml:
-    needs: build
+  create-release:
+    needs: build-macos
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
       
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
+        with:
+          path: artifacts
       
-      - name: Create latest-mac.yml
+      - name: Display structure of downloaded files
+        run: ls -R artifacts
+      
+      - name: Prepare release files
+        id: prepare
         run: |
-          VERSION=${GITHUB_REF#refs/tags/}
+          mkdir -p release-files
           
-          # Find the DMG file
-          DMG_FILE=$(find . -name "*.dmg" -type f | head -1)
+          # Copy all DMG and ZIP files
+          find artifacts -type f \( -name "*.dmg" -o -name "*.zip" -o -name "*.sha256" -o -name "*.sha512" \) -exec cp {} release-files/ \;
+          
+          echo "Release files:"
+          ls -lh release-files/
+          
+          # Get version
+          VERSION=${GITHUB_REF#refs/tags/}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+      
+      - name: Create latest-mac.yml for auto-updater
+        run: |
+          VERSION="${{ steps.prepare.outputs.version }}"
+          VERSION_NUMBER="${VERSION#v}"
+          
+          # Find the universal or x64 DMG (prefer universal)
+          DMG_UNIVERSAL=$(find release-files -name "*universal*.dmg" -o -name "*Universal*.dmg" | head -1)
+          DMG_X64=$(find release-files -name "*x64*.dmg" -o -name "*intel*.dmg" | head -1)
+          DMG_ARM64=$(find release-files -name "*arm64*.dmg" | head -1)
+          
+          # Use universal if available, otherwise x64
+          if [ -n "$DMG_UNIVERSAL" ]; then
+            DMG_FILE="$DMG_UNIVERSAL"
+          elif [ -n "$DMG_X64" ]; then
+            DMG_FILE="$DMG_X64"
+          else
+            DMG_FILE="$DMG_ARM64"
+          fi
           
           if [ -z "$DMG_FILE" ]; then
-            echo "Error: No DMG file found"
+            echo "Error: No DMG file found!"
             exit 1
           fi
           
-          # Get file size and SHA512
-          SIZE=$(stat -f%z "$DMG_FILE" 2>/dev/null || stat -c%s "$DMG_FILE")
-          SHA512=$(shasum -a 512 "$DMG_FILE" | awk '{print $1}')
+          echo "Using DMG: $DMG_FILE"
           
-          # Create latest-mac.yml
-          cat > latest-mac.yml <<EOF
-          version: ${VERSION#v}
+          # Get file info
+          FILENAME=$(basename "$DMG_FILE")
+          SIZE=$(stat -c%s "$DMG_FILE" 2>/dev/null || stat -f%z "$DMG_FILE")
+          SHA512=$(shasum -a 512 "$DMG_FILE" | awk '{print $1}')
+          RELEASE_DATE=$(date -u +'%Y-%m-%dT%H:%M:%S.000Z')
+          
+          # Create latest-mac.yml in electron-updater format
+          cat > release-files/latest-mac.yml <<EOF
+          version: ${VERSION_NUMBER}
           files:
-            - url: $(basename "$DMG_FILE")
-              sha512: $SHA512
-              size: $SIZE
-          path: https://github.com/${{ github.repository }}/releases/download/${VERSION}/$(basename "$DMG_FILE")
-          sha512: $SHA512
-          releaseDate: '$(date -u +'%Y-%m-%dT%H:%M:%S.000Z')'
+            - url: ${FILENAME}
+              sha512: ${SHA512}
+              size: ${SIZE}
+          path: ${FILENAME}
+          sha512: ${SHA512}
+          releaseDate: '${RELEASE_DATE}'
           EOF
           
-          cat latest-mac.yml
+          echo "Generated latest-mac.yml:"
+          cat release-files/latest-mac.yml
       
-      - name: Upload latest-mac.yml
-        uses: softprops/action-gh-release@v1
+      - name: Get repository info
+        id: repo_info
+        run: |
+          echo "owner=${{ github.repository_owner }}" >> $GITHUB_OUTPUT
+          echo "repo=${{ github.event.repository.name }}" >> $GITHUB_OUTPUT
+      
+      - name: Generate release notes
+        id: release_notes
+        run: |
+          VERSION="${{ steps.prepare.outputs.version }}"
+          
+          cat > release_notes.md <<EOF
+          # Browzer ${VERSION}
+          
+          ## 📦 Downloads
+          
+          ### macOS
+          
+          Choose the appropriate version for your Mac:
+          
+          - **Intel Macs**: Download \`Browzer-${VERSION}-x64.dmg\`
+          - **Apple Silicon (M1/M2/M3)**: Download \`Browzer-${VERSION}-arm64.dmg\`
+          - **Universal**: Download \`Browzer-${VERSION}-universal.dmg\` (works on both)
+          
+          ### ✅ Installation
+          
+          1. Download the appropriate DMG file
+          2. Double-click to mount the DMG
+          3. Drag Browzer to your Applications folder
+          4. Launch from Applications (you may need to allow it in System Settings > Privacy & Security)
+          
+          ### 🔐 Verification
+          
+          Verify the integrity of your download:
+          
+          \`\`\`bash
+          shasum -a 256 -c Browzer-${VERSION}-x64.dmg.sha256
+          \`\`\`
+          
+          ### 🔄 Auto-Updates
+          
+          Once installed, Browzer will automatically check for and install future updates.
+          
+          ### 📝 What's New
+          
+          <!-- Add your release notes here -->
+          
+          EOF
+          
+          cat release_notes.md
+      
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          files: latest-mac.yml
+          files: release-files/*
+          body_path: release_notes.md
+          draft: false
+          prerelease: false
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Output release info
+        run: |
+          echo "✅ Release created successfully!"
+          echo "Version: ${{ steps.prepare.outputs.version }}"
+          echo "Files released:"
+          ls -lh release-files/
 
-  notify:
-    needs: build
+  notify-success:
+    needs: [build-macos, create-release]
     runs-on: ubuntu-latest
-    if: always()
+    if: success()
     
     steps:
-      - name: Check build status
+      - name: Success notification
         run: |
-          if [ "${{ needs.build.result }}" = "success" ]; then
-            echo "✅ macOS build completed successfully"
-          else
-            echo "❌ macOS build failed"
-            exit 1
-          fi
+          echo "✅ macOS build and release completed successfully!"
+          echo "Version: ${GITHUB_REF#refs/tags/}"
+
+  notify-failure:
+    needs: [build-macos, create-release]
+    runs-on: ubuntu-latest
+    if: failure()
+    
+    steps:
+      - name: Failure notification
+        run: |
+          echo "❌ macOS build or release failed!"
+          echo "Check the logs above for details."
+          exit 1
