refactor: update branding from browzer.app to trybrowzer.com
- Changed app bundle ID and author information to reflect new domain
- Updated help menu links to point to trybrowzer.com
- Adjusted SSE client timeouts for better connection stability
- Removed unused electron-builder configuration from package.json

--- a/package.json
+++ b/package.json
@@ -19,47 +19,10 @@
   },
   "keywords": [],
   "author": {
-    "name": "Abhinandan",
-    "email": "abhinandanverma551@gmail.com"
+    "name": "Browzer Inc.",
+    "email": "contact@trybrowzer.com"
   },
   "license": "MIT",
-  "build": {
-    "appId": "com.browzer.app",
-    "productName": "Browzer",
-    "directories": {
-      "buildResources": "assets"
-    },
-    "mac": {
-      "target": [
-        "dmg",
-        "zip"
-      ],
-      "icon": "assets/icon.icns",
-      "category": "public.app-category.productivity",
-      "hardenedRuntime": true,
-      "gatekeeperAssess": false,
-      "entitlements": "entitlements.mac.plist",
-      "entitlementsInherit": "entitlements.mac.plist",
-      "notarize": {
-        "teamId": "${APPLE_TEAM_ID}"
-      }
-    },
-    "dmg": {
-      "contents": [
-        {
-          "x": 130,
-          "y": 220,
-          "type": "file"
-        },
-        {
-          "x": 410,
-          "y": 220,
-          "type": "link",
-          "path": "/Applications"
-        }
-      ]
-    }
-  },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
