chore: update company name and refactor menu link handling
- Changed author name from "Browzer Inc." to "Browzer Labs Inc." in package.json
- Modified AppMenu to use BrowserManager for opening links instead of shell.openExternal
- Updated import paths to use @ alias for consistency

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "Browzer Inc.",
+    "name": "Browzer Labs Inc.",
     "email": "contact@trybrowzer.com"
   },
   "license": "MIT",
