--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "keywords": [],
   "author": {
-    "name": "Browzer Labs Inc.",
+    "name": "Browzer Labs, Inc.",
     "email": "contact@trybrowzer.com"
   },
   "license": "MIT",
