--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@anthropic-ai/sdk": "^0.66.0",
     "@electron-forge/maker-dmg": "^7.10.2",
     "@electron-forge/publisher-github": "^7.10.2",
+    "@lottiefiles/dotlottie-react": "^0.17.7",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -97,6 +98,7 @@
     "electron-store": "^11.0.2",
     "electron-updater": "^6.6.2",
     "eventsource": "^4.0.0",
+    "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
