fix: add release tag for manual triggers

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -136,7 +136,7 @@ jobs:
   create-release:
     needs: build-macos
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && github.event.inputs.version != '')
+    if: startsWith(github.ref, 'refs/tags/')
     
     permissions:
       contents: write
@@ -164,8 +164,12 @@ jobs:
           echo "Release files:"
           ls -lh release-files/
           
-          # Get version
-          VERSION=${GITHUB_REF#refs/tags/}
+          # Get version from tag or manual input
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+          else
+            VERSION=${GITHUB_REF#refs/tags/}
+          fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
       
       - name: Create latest-mac.yml for auto-updater
@@ -269,6 +273,7 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
+          tag_name: ${{ steps.prepare.outputs.version }}
           files: release-files/*
           body_path: release_notes.md
           draft: false
