--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -136,7 +136,7 @@ jobs:
   create-release:
     needs: build-macos
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && github.event.inputs.version != '')
     
     permissions:
       contents: write
