fix: read api url from secrets and set in packaged app

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -82,6 +82,7 @@ jobs:
       - name: Build for macOS (${{ matrix.arch }})
         env:
           NODE_ENV: production
+          BACKEND_API_URL: ${{ secrets.BACKEND_API_URL }}
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
