--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.545.0",
+    "node-machine-id": "^1.1.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
