--- a/entitlements.mac.plist
+++ b/entitlements.mac.plist
@@ -74,6 +74,12 @@
   <key>com.apple.security.smartcard</key>
   <true/>
   
+  <!-- Keychain access (for secure token storage via safeStorage) -->
+  <key>keychain-access-groups</key>
+  <array>
+    <string>$(AppIdentifierPrefix)com.trybrowzer.app</string>
+  </array>
+  
   
   <!-- ============================================ -->
   <!-- TEMPORARY FILES - Exception Paths -->
