feat: add GitHub publish configuration for electron-updater
- Added publish configuration to package.json with GitHub provider settings
- Configured owner as BrowzerLabs and repo as Browzer
- Set releaseType to "release" for production releases
- Enables electron-updater to fetch updates from GitHub releases

--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "email": "contact@trybrowzer.com"
   },
   "license": "MIT",
+  "publish": {
+    "provider": "github",
+    "owner": "BrowzerLabs",
+    "repo": "Browzer",
+    "releaseType": "release"
+  },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
