--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.13.1",
     "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
