--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.66.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@electron-forge/maker-dmg": "^7.10.2",
     "@electron-forge/publisher-github": "^7.10.2",
     "@lottiefiles/dotlottie-react": "^0.17.7",
