--- a/package.json
+++ b/package.json
@@ -73,6 +73,9 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.66.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@electron-forge/maker-dmg": "^7.10.2",
     "@electron-forge/publisher-github": "^7.10.2",
     "@lottiefiles/dotlottie-react": "^0.17.7",
@@ -80,9 +83,11 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -94,6 +99,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.13.1",
     "better-sqlite3": "^12.4.1",
     "class-variance-authority": "^0.7.1",
