``` refactor: exclude workflow files from triggering automatic releases
- Add '.github/workflows/**' to path ignore list in auto-release.yml
- Prevent workflow file changes from triggering new release versions
```

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -10,6 +10,7 @@ on:
       - 'docs/**'
       - '.gitignore'
       - 'LICENSE'
+      - '.github/workflows/**'
 
 # Prevent concurrent releases
 concurrency:
