feat: add Windows build workflow with code signing and auto-update support
- Add build-windows.yml workflow with x64 and arm64 architecture support
- Configure Squirrel.Windows maker with code signing certificate handling
- Generate latest.yml for electron-updater auto-update functionality
- Add Windows-specific titleBarStyle and titleBarOverlay configuration
- Include SHA256/SHA512 checksum generation for release artifacts
- Add make:win-x64 and make:win-arm64 scripts to package.json

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -119,7 +119,9 @@ jobs:
           echo "- **Tag Existed**: ${{ steps.check_tag.outputs.exists }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           if [ "${{ steps.check_tag.outputs.exists }}" = "false" ]; then
-            echo "✅ Tag created and pushed. Build workflow will be triggered automatically." >> $GITHUB_STEP_SUMMARY
+            echo "✅ Tag created and pushed. Build workflows will be triggered automatically:" >> $GITHUB_STEP_SUMMARY
+            echo "  - macOS (build-macos.yml)" >> $GITHUB_STEP_SUMMARY
+            echo "  - Windows (build-windows.yml)" >> $GITHUB_STEP_SUMMARY
           else
             echo "⏭️ Tag already existed. No new release created." >> $GITHUB_STEP_SUMMARY
           fi
