feat: add Windows build workflow with code signing and auto-update support
- Add build-windows.yml workflow with x64 and arm64 architecture support
- Configure Squirrel.Windows maker with code signing certificate handling
- Generate latest.yml for electron-updater auto-update functionality
- Add Windows-specific titleBarStyle and titleBarOverlay configuration
- Include SHA256/SHA512 checksum generation for release artifacts
- Add make:win-x64 and make:win-arm64 scripts to package.json

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "make:arm64": "NODE_ENV=production electron-forge make --platform darwin --arch arm64",
     "make:universal": "NODE_ENV=production electron-forge make --platform darwin --arch universal",
     "make:win": "electron-forge make --platform=win32",
+    "make:win-x64": "electron-forge make --platform=win32 --arch=x64",
+    "make:win-arm64": "electron-forge make --platform=win32 --arch=arm64",
     "make:linux": "electron-forge make --platform=linux",
     "lint": "eslint --ext .ts,.tsx ."
   },
