--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -30,12 +30,12 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ secrets.NODE_VERSION }}
+          node-version: ${{ env.NODE_VERSION }}
       
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: ${{ secrets.PNPM_VERSION }}
+          version: ${{ env.PNPM_VERSION }}
       
       - name: Get pnpm store directory
         shell: pwsh
@@ -74,7 +74,7 @@ jobs:
           Get-Content package.json | Select-String '"version"'
       
       - name: Setup Windows code signing certificate
-        if: secrets.WINDOWS_CERTIFICATE_BASE64 != ''
+        if: ${{ secrets.WINDOWS_CERTIFICATE_BASE64 != '' }}
         env:
           WINDOWS_CERTIFICATE_BASE64: ${{ secrets.WINDOWS_CERTIFICATE_BASE64 }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
