refactor(ci): move Windows certificate secrets to job-level environment variables
Lines 76-105: the step used an if
conditional that compares a secret (secrets.WINDOWS_CERTIFICATE_BASE64) which
cannot be referenced in step-level if expressions; change it to check the
job/env variable instead.

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -19,6 +19,10 @@ jobs:
   build-windows:
     runs-on: windows-latest
     
+    env:
+      WINDOWS_CERTIFICATE_BASE64: ${{ secrets.WINDOWS_CERTIFICATE_BASE64 }}
+      WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
+    
     strategy:
       matrix:
         arch: [x64, arm64]
@@ -74,10 +78,7 @@ jobs:
           Get-Content package.json | Select-String '"version"'
       
       - name: Setup Windows code signing certificate
-        if: ${{ secrets.WINDOWS_CERTIFICATE_BASE64 != '' }}
-        env:
-          WINDOWS_CERTIFICATE_BASE64: ${{ secrets.WINDOWS_CERTIFICATE_BASE64 }}
-          WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
+        if: ${{ env.WINDOWS_CERTIFICATE_BASE64 != '' }}
         shell: pwsh
         run: |
           # Decode certificate from base64
