--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.21",
@@ -138,6 +139,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.4.0",
+    "uuid": "^13.0.0",
+    "yaml": "^2.8.2",
     "zustand": "^5.0.8"
   }
 }
