feat(recording): Add screen recording support with video capture and storage - Add ScreenRecordingService for capturing browser window video during recording sessions - Integrate video recording lifecycle with RecordingService (start/stop/discard) - Store video file paths in SQLite database with new video_path column - Implement video file cleanup when deleting recordings (single/bulk/clear all) - Change stopRecording() return type from session data to boolean success indicator

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,8 @@
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
     "import/order": ["warn", { "newlines-between": "always" }],
-    "no-case-declarations": "off"
+    "no-case-declarations": "off",
+    "no-useless-escape": "off"
   },
   "overrides": [
     {
