fix(link): update ESLint rules and fixed linting - changes due to lint fix & pnpm format

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
   },
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "import/order": ["error", { "newlines-between": "always" }]
+    "import/order": ["warn", { "newlines-between": "always" }],
+    "no-case-declarations": "off"
   },
   "overrides": [
     {
